lab1/Test/L1-A-12-9.output
Error Type A at Line 30
Error Type B at Line 42
